--- a/src/App.css
+++ b/src/App.css
@@ -23,7 +23,7 @@
   cursor: pointer;
 }
 .board-col-movable:hover {
-  opacity: 0.9;
+  /* opacity: 0.9; */
 }
 .board-idx {
   position: absolute;
@@ -40,15 +40,48 @@
   background-color: var(--clr-white-cell);
 }
 
-.mark {
-  background: gold;
-  border: 2px solid black;
+.active-cell::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  isolation: isolate;
+  z-index: -1;
+  background: #e6a224 !important;
 }
 .valid-cell {
-  background: rgba(255, 217, 0, 0.81);
-  border: 2px solid black;
+  background-color: inherit;
+  box-sizing: border-box;
 }
-.check-cell {
-  background: rgba(255, 97, 40, 0.81);
-  border: 2px solid black;
+.valid-cell::after {
+  content: "" !important;
+  position: absolute !important;
+  top: 50% !important;
+  left: 50% !important;
+  width: 60% !important;
+  height: 60% !important;
+  border-radius: 35% !important;
+  background-color: #e6a224b4 !important;
+  transform: translate(-50%, -50%) !important;
+}
+
+.check-cell::after {
+  content: "" !important;
+  position: absolute !important;
+  top: 50% !important;
+  left: 50% !important;
+  width: 60% !important;
+  height: 60% !important;
+  border-radius: 35% !important;
+  background-color: #ad2424 !important;
+  transform: translate(-50%, -50%) !important;
+}
+
+.black-cell {
+  background-color: var(--clr-black-cell);
+}
+.white-cell {
+  background-color: var(--clr-white-cell);
 }
