Add Timer Context

--- a/src/index.css
+++ b/src/index.css
@@ -75,5 +75,5 @@ body {
   color: var(--clr-primary) !important;
 }
 .text-sans-serif {
-  font-family: sans-serif;
+  font-family: sans-serif !important;
 }
